# MSIMysticLightConsole

./: .gitignore  CMakeLists.txt  README.md
include/MysticLight/: MysticLight_SDK.h
src/: MSIMysticLightControl.cpp  MSIMysticLightControl.h  NZXTLightControl.cpp  NZXTLightControl.h  log.cpp  log.h  stdafx.cpp  stdafx.h  targetver.h  terminal.cpp  terminal.h  testCPP.cpp
